Fix to additional height on Select controls after change that added overflow:hidden

--- a/aikau/src/main/resources/alfresco/forms/controls/css/Select.css
+++ b/aikau/src/main/resources/alfresco/forms/controls/css/Select.css
@@ -6,6 +6,7 @@
             text-overflow: ellipsis;
             overflow: hidden;
             text-align: left;
+            height: 1.2em;
          }
 
          > table {
